# feistel

./: Cargo.toml  README.md
src/: array.rs  lib.rs  round.rs  symmetric.rs  xor_array.rs
tests/: sha256.rs  swap.rs
