[package]
name = "feistel"
version = "0.1.0"
edition = "2021"
publish = true
description = "Generic Feistel Cipher"
keywords = ["crypto", "no-std"]
categories = ["no-std", "cryptography", "algorithms"]

[features]
default = ["array"]
array = ["dep:generic-array"]

[dependencies]
generic-array = { version = "1.1.0", optional = true }

[dev-dependencies]
sha2 = "0.10.8"
